kdemultimedia (4:4.4.0-0r1) UNRELEASED; urgency=low

  * New upstream release.
    - the KMix popup closes correctly. (Closes: #557081)

  [ Modestas Vainius ]
  * Change my email address to modax@debian.org in Uploaders field.
  * Fix Vcs-Browser URL.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 17 Feb 2010 20:43:13 +0100

kdemultimedia (4:4.3.4-1) unstable; urgency=low

  * New upstream release.

  +++ Changes by Ana Beatriz Guerrero Lopez:

  * Remove myself from Uploaders.

  +++ Changes by Modestas Vainius:

  * Bump KDE build dependencies to current version.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 09 Dec 2009 00:24:09 +0200

kdemultimedia (4:4.3.2-1) unstable; urgency=low

  * New upstream release.

  +++ Changes by  KarlFerdinand Ebert:
  * Add source.lintian-overrides to ignore lintian warning about missing
    debug depends.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 13 Oct 2009 00:26:33 +0200

kdemultimedia (4:4.3.1-1) unstable; urgency=low

  * New upstream release.

  +++ Changes by Fathi Boudra:

  * Remove the kfreebsd patch - merged upstream.
  * Bump KDE build dependencies to 4.3.1.
  * Bump Standards-Version to 3.8.3 (no changes needed).

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 31 Aug 2009 15:38:48 +0200

kdemultimedia (4:4.3.0-3) unstable; urgency=low

  * Add missing part to the kfreebsd patch. Thanks to Petr Salinger again.
    Really (Closes: #542639).

 -- Ana Beatriz Guerrero Lopez <ana@henry.aurel32.net>  Sun, 23 Aug 2009 14:18:22 +0200

kdemultimedia (4:4.3.0-2) unstable; urgency=low

  * Add patch to fix build in kfreebsd. Thanks to Petr Salinger. 
    (Closes: #542639) 
  * Bump Standards-Version from 3.8.2 to 3.8.3 (no changes needed).
  * Updating packaging years copyright.

 -- Ana Beatriz Guerrero Lopez <ana@debian.org>  Sat, 22 Aug 2009 14:51:20 +0200

kdemultimedia (4:4.3.0-1) unstable; urgency=low
