@@ -3,11 +3,12 @@ Section: kde
 Priority: optional
 Maintainer: Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>
 Uploaders: Sune Vuorela <debian@pusling.com>, Fathi Boudra <fabo@debian.org>,
- Armin Berres <armin+debian@space-based.de>, Modestas Vainius <modax@debian.org>
+ Armin Berres <armin+debian@space-based.de>, Modestas Vainius <modax@debian.org>,
+ George Kiagiadakis <gkiagiad@csd.uoc.gr>
 Build-Depends: cdbs (>= 0.4.51), debhelper (>= 7), quilt, pkg-kde-tools (>= 0.4.2),
- kdelibs5-dev (>= 4:4.3.4), libknotificationitem-1-dev (>= 4:4.3.4), libphonon-dev (>= 4:4.5.2),
+ kdelibs5-dev (>= 4:4.4.0), libphonon-dev (>= 4:4.5.2),
  libasound2-dev (>= 1.0.14a) [!kfreebsd-i386 !kfreebsd-amd64 !hurd-i386],
- libcdparanoia0-dev, libflac-dev, libmusicbrainz4-dev, libpulse-dev, libxine-dev,
+ libcdparanoia-dev, libflac-dev, libmusicbrainz4-dev, libpulse-dev, libxine-dev,
  libogg-dev, libtag1-dev, libtheora-dev, libtunepimp-dev, libvorbis-dev, libx11-dev
 Standards-Version: 3.8.3
 Homepage: http://www.kde.org/
