@@ -5,13 +5,14 @@ usr/lib/kde4/libaudiocd_encoder_lame.so
 usr/lib/kde4/libaudiocd_encoder_vorbis.so
 usr/lib/kde4/libaudiocd_encoder_wav.so
 usr/lib/libaudiocdplugins.so.4
-usr/lib/libaudiocdplugins.so.4.3.0
+usr/lib/libaudiocdplugins.so.4.4.0
 usr/share/doc/kde4/HTML/en/kioslave/audiocd/common
 usr/share/doc/kde4/HTML/en/kioslave/audiocd/index.cache.bz2
 usr/share/doc/kde4/HTML/en/kioslave/audiocd/index.docbook
 usr/share/kde4/apps/kconf_update/audiocd.upd
 usr/share/kde4/apps/kconf_update/upgrade-metadata.sh
 usr/share/kde4/apps/konqsidebartng/virtual_folders/services/audiocd.desktop
+usr/share/kde4/apps/solid/actions/solid_audiocd.desktop
 usr/share/kde4/config.kcfg/audiocd_lame_encoder.kcfg
 usr/share/kde4/config.kcfg/audiocd_vorbis_encoder.kcfg
 usr/share/kde4/services/audiocd.desktop
